@@ -22,6 +22,61 @@ NCMAT v7
   type freegas
 
 
+c_gas.load(doScatter=False,doAbsorption=False).dump() ::
+
+
+>>> Material info:
+
+----------------------------------------------------------------------------------------------------
+------------------------------------   NCrystal Material Info   ------------------------------------
+----------------------------------------------------------------------------------------------------
+Data source: <anonymous-ncmat-data>
+----------------------------------------------------------------------------------------------------
+Density : 0.000233642 g/cm3, 2.57767e-05 atoms/Aa^3
+----------------------------------------------------------------------------------------------------
+Composition (by mole): 91% He 9% Ne
+----------------------------------------------------------------------------------------------------
+Composition (by mass): 66.7281% He 33.2719% Ne
+----------------------------------------------------------------------------------------------------
+Atom data:
+   He = He(cohSL=3.26548fm cohXS=1.34barn incXS=0barn absXS=0.00747barn mass=4.0026u Z=2)
+   Ne = Ne(cohSL=4.566fm cohXS=2.61988barn incXS=0.008barn absXS=0.039barn mass=20.1794u Z=10)
+----------------------------------------------------------------------------------------------------
+Averaged quantities:
+   Atomic mass               : 5.45852u
+   Absorption XS at 2200m/s  : 0.0103077 barn
+   Free scattering XS        : 0.992447 barn
+   Scattering length density : 0.000871903 10^-6/Aa^2
+----------------------------------------------------------------------------------------------------
+Temperature : 293.15 kelvin
+----------------------------------------------------------------------------------------------------
+State of matter: Gas
+----------------------------------------------------------------------------------------------------
+Dynamic info for He (91%):
+   type: freegas
+Dynamic info for Ne (9%):
+   type: freegas
+----------------------------------------------------------------------------------------------------
+
+c_gas.load(doInfo=False,doAbsorption=False).dump() ::
+
+
+>>> Scattering process (objects tree):
+
+ProcComposition(2 components, isotropic)
+   |-- 0.91 * FreeGas(sigma_free=0.854857barn;T=293.15K;M=4.0026u)
+   \-- 0.09 * FreeGas(sigma_free=2.38364barn;T=293.15K;M=20.1794u)
+
+c_gas.load(doInfo=False,doScatter=False).dump() ::
+
+
+>>> Absorption process (object tree):
+
+AbsOOV(sigma_2200=0.0103077barn)
+
+c_gas.load().dump() ::
+
+
 >>> Material info:
 
 ----------------------------------------------------------------------------------------------------
