@@ -1,4 +1,6 @@
 v4.2.9 (work in progress)
+     * Add doInfo, doScatter, and doAbsorption flags to the NCMATComposer.load
+       method (github issue #280).
      * Add more dedicated unit tests for NCMATComposer.
      * Add missing include in NCrystal/internal/utils/NCHists.hh.
      * Expose internal Hist1D utility Python class in new (still internal)
